--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,9 @@ zip = "2.2"
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 indicatif = "0.17"
-rayon = "1.10"
 memmap2 = "0.9"
 filetime = "0.2"
 crc32fast = "1.4"
-num_cpus = "1.16"
 
 # Linux-specific optimizations
 [target.'cfg(target_os = "linux")'.dependencies]
@@ -23,6 +21,11 @@ rustix = { version = "1.0", features = ["fs", "mm"] }
 
 [dev-dependencies]
 tempfile = "3.15"
+criterion = "0.5"
+
+[[bench]]
+name = "extraction_bench"
+harness = false
 
 [profile.release]
 opt-level = 3
