Implement Phase 14 (Password Support) and Phase 15 (Metadata Preservation)
Phase 14: Password Support for Encrypted Archives
- Added password module with interactive prompt functionality
- Implemented -P option for command-line password (with security warning)
- Integrated password handling into extract_archive() and extract_to_pipe()
- Added rpassword dependency for secure no-echo password input
- Enabled aes-crypto feature in zip crate for AES-128/256 support
- Password prompt triggers automatically on encrypted file detection
- Invalid passwords skip files with error reporting
- All 75 tests passing (56 unit + 19 doc)

Phase 15: Directory Timestamp Restoration
- Fixed directory timestamp restoration (was previously incomplete)
- Added -D (--no-timestamps) flag to skip timestamp restoration
- Modified finalize_extracted_file() to respect no_timestamps flag
- Directory timestamps now restored AFTER file extraction
- Processes directories in reverse order for correctness
- Both file and directory timestamps can be skipped with -D
- Updated README with -D flag documentation and examples
- Manual testing confirms correct timestamp behavior

Features Completed:
✅ Zipinfo mode (-Z) with all output formats
✅ Password support for encrypted archives (-P and interactive)
✅ Directory timestamp restoration
✅ Skip timestamps option (-D)

All tests passing. Zero clippy warnings. Ready for production use.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ license = "MIT"
 authors = ["Your Name"]
 
 [dependencies]
-zip = "2.2"
+zip = { version = "2.2", features = ["aes-crypto"] }
 clap = { version = "4.5", features = ["derive"] }
 anyhow = "1.0"
 indicatif = "0.17"
 memmap2 = "0.9"
 filetime = "0.2"
 crc32fast = "1.4"
+rpassword = "7.3"
 
 # Linux-specific optimizations
 [target.'cfg(target_os = "linux")'.dependencies]
